[gd_scene load_steps=8 format=2]

[ext_resource path="res://Items/Sprite-0001.png" type="Texture" id=1]
[ext_resource path="res://Items/light.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Controls.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 6 )

[sub_resource type="CircleShape2D" id=2]
radius = 8.0

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 8, 8 )

[node name="Player" type="KinematicBody2D" groups=["Player"]]
scale = Vector2( 0.5, 0.5 )
z_index = 5
collision_layer = 2
collision_mask = 9
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
light_mask = 2
rotation = 3.14159
texture = ExtResource( 1 )

[node name="MainLight" type="Light2D" parent="."]
texture = ExtResource( 2 )
texture_scale = 0.7
shadow_enabled = true
shadow_filter = 5
shadow_filter_smooth = 0.3

[node name="WallLight" type="Light2D" parent="."]
texture = ExtResource( 2 )
texture_scale = 0.8
mode = 3
range_item_cull_mask = 2
shadow_enabled = true
shadow_filter = 5
shadow_filter_smooth = 0.3
shadow_item_cull_mask = 2

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.14, 0.14 )
limit_smoothed = true
smoothing_enabled = true
smoothing_speed = 4.0

[node name="Controls" parent="." instance=ExtResource( 4 )]

[node name="EnemyArea" type="Area2D" parent="." groups=["PlayerArea"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyArea"]
shape = SubResource( 2 )

[node name="DoorZ_index" type="Area2D" parent="." groups=["DoorZ_index"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DoorZ_index"]
shape = SubResource( 6 )

[connection signal="area_entered" from="EnemyArea" to="." method="_on_EnemyArea_area_entered"]
[connection signal="area_entered" from="DoorZ_index" to="." method="_on_DoorZ_index_area_entered"]
[connection signal="area_exited" from="DoorZ_index" to="." method="_on_DoorZ_index_area_exited"]
